--- a/react-dev/src/App.css
+++ b/react-dev/src/App.css
@@ -1,36 +1,61 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 img {
   max-width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  text-align: center;
 }
+
+.dropzone {
+  cursor: pointer;
+}
+
+.waiting, .dropzone {
+  margin: 0 1rem 1rem 1rem;
+  padding: 1rem;
+  border: 1px dashed;
+  background-color: rgba(0, 0, 0, .03);
+  text-align: center;
+}
+
+.main {
+  border-top: 1px solid;
+}
+
+.filebars {
+  width: 30%;
+  max-width: 300px;
+  border-right: 1px solid;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.filebar {
+  width: 100%;
+  padding: 5px 5px;;
+  cursor: pointer;
+}
+
+.filebar:hover:not(.active) {
+  background-color: rgba(0, 0, 0, .1);
+}
+
+.filebar.active {
+  background-color: rgba(0, 0, 0, .2);
+}
+
+.preview {
+  flex: 1 1;
+  overflow-y: auto;
+}
+
+/** flex and stuff **/
+
+.d-flex { display: flex; }
+.flex-col { flex-direction: column; }
+.flex-row { flex-direction: row; }
+.flex-0 { flex: 0 0; }
+.flex-1 { flex: 1 1; }
+.middle { height: 100%; display: flex; justify-content: center; align-items: center; }
+.w-100 { width: 100%; }
+.h-100 { height: 100vh; }
