--- a/react-dev/src/App.css
+++ b/react-dev/src/App.css
@@ -1,39 +1,86 @@
-img {
-  max-width: 100%;
+.header {
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  z-index: 10;
 }
 
 .title {
   text-align: center;
+  margin: .5rem 0;
+}
+
+.title strong {
+  font-size: 1.5rem;
 }
 
 .dropzone {
   cursor: pointer;
 }
 
-.waiting, .dropzone {
-  margin: 0 1rem 1rem 1rem;
-  padding: 1rem;
-  border: 1px dashed;
-  background-color: rgba(0, 0, 0, .03);
-  text-align: center;
+.waiting {
+  background-color: rgba(0, 0, 0, .01);
+  border: 0px dashed rgba(0, 0, 0, 0);
 }
 
-.main {
-  border-top: 1px solid;
+.dropzone {
+  background-color: rgba(0, 0, 0, .1);
+  border: 1px dashed;
+}
+
+.waiting, .dropzone {
+  margin: 0 .8rem .8rem .8rem;
+  padding: 5px;
+  text-align: center;
 }
 
 .filebars {
   width: 30%;
   max-width: 300px;
-  border-right: 1px solid;
   overflow-y: auto;
   overflow-x: hidden;
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  z-index: 50;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.filebars-title {
+  font-weight: 600;
+}
+
+.filebars-title, .filebar {
+  padding: 5px 5px;
+  flex: 0 0;
+}
+
+.filebars-action {
+  padding: 5px 5px;
+  display: flex;
+  flex-direction: row;
+}
+
+.filebars-action div {
+  flex: 1 1;
+  text-align: center;
+  background-color: rgba(0, 122, 49, 1);
+  color: white;
+  border: 0;
+  border-radius: 5px;
+  margin: 2px;
+  padding: .75em;
+  cursor: pointer;
+}
+
+.filebars-action div.danger {
+  background-color: rgba(255, 36, 36, 1);
 }
 
 .filebar {
-  width: 100%;
-  padding: 5px 5px;;
   cursor: pointer;
+  border-radius: 4px;
+  margin: 4px;
 }
 
 .filebar:hover:not(.active) {
@@ -47,6 +94,14 @@ img {
 .preview {
   flex: 1 1;
   overflow-y: auto;
+  text-align: center;
+  padding: 20px;
+  background-color: rgba(130, 130, 130, 1);
+}
+
+.preview img {
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 1);
+  max-width: 300px;
 }
 
 /** flex and stuff **/
