--- a/react-dev/src/App.css
+++ b/react-dev/src/App.css
@@ -91,7 +91,7 @@
 
 .preview {
   flex: 1 1;
-  overflow-y: auto;
+  overflow-y: hidden;
   text-align: center;
   padding: 20px;
   background-color: rgba(130, 130, 130, 1);
@@ -99,7 +99,8 @@
 
 .preview img {
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 1);
-  max-width: 300px;
+  max-height: 100%;
+  overflow-y: hidden;
 }
 
 /** flex and stuff **/
