--- a/react-dev/src/App.css
+++ b/react-dev/src/App.css
@@ -95,6 +95,7 @@
   max-width: 200px;
   background-color: rgba(255, 255, 255, 1);
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  z-index: 2;
 }
 
 .fileinfo .fileinfo-title, .fileinfo .fileinfo-content {
