add modal and help

--- a/react-dev/src/index.css
+++ b/react-dev/src/index.css
@@ -21,3 +21,11 @@ code {
 *:focus {
   outline: unset;
 }
+
+ol, ul {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding-inline-start: 1.3em;
+}
