--- a/react-dev/src/App.css
+++ b/react-dev/src/App.css
@@ -46,10 +46,6 @@
   justify-content: flex-start;
 }
 
-.filebars-title {
-  font-weight: 600;
-}
-
 .filebars-title, .filebar {
   padding: .75em;
 }
@@ -130,6 +126,50 @@
   overflow-y: hidden;
 }
 
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, .5);
+  z-index: 102;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-container .modal-content {
+  background: white;
+  border-radius: 5px;
+  box-shadow: 10px 10px 100px 5px rgba(0, 0, 0, .5);
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  max-width: 70%;
+}
+
+.modal-container .modal-content .modal-header, .modal-container .modal-content .modal-body {
+  display: flex;
+  flex-direction: row;
+}
+
+.modal-container .modal-content .modal-header {
+  font-weight: 600;
+  font-size: 2em;
+  margin-bottom: 20px;
+  justify-content: space-between;
+}
+
+.modal-container .modal-content .modal-header .modal-close {
+  width: 1em;
+  cursor: pointer;
+  background-image: url('close.png');
+  background-size: contain;
+  background-position: center center;
+  background-repeat: none;
+}
+
 /** flex and stuff **/
 
 .d-flex { display: flex; }
@@ -140,3 +180,4 @@
 .middle { height: 100%; display: flex; justify-content: center; align-items: center; }
 .w-100 { width: 100%; }
 .h-100 { height: 100vh; }
+.cursor-pointer { cursor: pointer; }
